Fix checkout button position on small devices

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -2465,7 +2465,7 @@ body.checkout .section-heading .gw-icon {
 
 
   @media (max-width: @screen-xs-max) {
-    background: none;
+    display: none;
   }
 }
 
